 * Subjects inputform plugin now uses a field-specific search_bar phrase,
    fixing #3070
 * Don't always show the owner_denied message, fixing #3130
 * Use has_role to determine whether a user is an editor or admin, fixing #2968
 * Added a config option 'max_history_width' to control the width of XML diffs
    on the History screen, fixing #3146
 * Set the character encoding in MIME emails to UTF8, fixing #3150
 * Added 'Save for Later' button to deposit screen, fixing #3071
 * Added a note to Saved searches screen to indicate how to create a Saved
    Search, fixing #2999
 * Strip namespacing from HTML exports (fixes <emph> in citations) under
    LibXML, fixing #3085

2007-12-11 cjg
 * Added first cut of toolbox code. Still needs security before release.

2007-12-11 cjg
 * Fixed an issue with some indexer related subroutines being called with 
    neither &foo or foo() which caused issues in some perl setups.

2007-12-11 cjg
 * Fixed a trivial case - a session wasn't terminated when exiting Rewrite
    in a certain way.

2007-12-11 cjg
 * Added method of setting alternate template for a static file (using 
    foo.template file in same dir as foo.title etc.)
 * Added config option to searches to pick alternate template.
 * Added additional option to ScreenProcessor to allow custom template.

2007-12-11 cjg
 * Added code to pull an optional "match" value from the search form
    on set and subject fields. This allows you to specifiy an exact
    search, although there's no option in the form for this, it will
    be understood if part of the GET request.

2007-12-11 cjg
 * In default XML importer; fixed very minor bug that a field was not 
    cleared after use. Also rearranged code to be more suitable for 
    allowing URL formats other than file://

2007-12-11 cjg 
 * epadmin has new option "refresh_abstracts" which causes the webserver
    to regenerate abstract pages when they are requested. Closes ticket
    #3162 and probably deprcates generate_abstracts.
